--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "json-server --watch reviews.json --port 5000",
+    "serve": "concurrently \"npm start\" \"npm run dev\""
   },
   "dependencies": {
+    "concurrently": "^7.6.0",
+    "json-server": "^0.17.2",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
